# Xiao-Halow-to-WiFi-Bridge

./: .gitignore  GEMINI.md  README.md  export.sh
examples/iperf/: CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.defaults.medium  sdkconfig.defaults.small
examples/iperf/main/: CMakeLists.txt
examples/iperf/main/src/: dns_forwarder.c  iperf.c  mm_app_common.c  mm_app_common.h  mm_app_loadconfig.c  nat_router.c  settings.c  settings.h  web_config.c
examples/iperf_esp32c6/: README.md  partitions.csv  sdkconfig.defaults
examples/iperf_esp32c6/main/: iperf_example_main.c
examples/porting_assistant/: CMakeLists.txt
examples/rf-test/: CMakeLists.txt
examples/scan/: CMakeLists.txt
examples/sta_connect/: CMakeLists.txt
examples/sta_reboot/: CMakeLists.txt
examples/transfer_reset/: CMakeLists.txt
examples/web_camera_serve/: CMakeLists.txt
framework/mk/: core-esp32c6.mk  core-esp32p4.mk
framework/mm_shims/: CMakeLists.txt  Kconfig  idf_component.yml  mmosal_shim_freertos_esp32.c
framework/morselib/: CMakeLists.txt  idf_component.yml
framework/src/hostap/: CMakeLists.txt  idf_component.yml
framework/src/mmipal/: idf_component.yml
framework/src/mmiperf/: idf_component.yml
framework/src/mmpktmem/: idf_component.yml
framework/src/mmregdb/: CMakeLists.txt  idf_component.yml
framework/src/mmutils/: idf_component.yml
framework/src/slip/: idf_component.yml
release_binaries/esp32c6/: flasher_args.json
